# engineering-agentic-ai-companion

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: MIRAS_JOURNEY.md  field-guide.html  miras-journey-film.html  miras-journey-voiceover.md  miras-journey.html
examples/: chapter_01.py  chapter_02.py  chapter_03.py  chapter_04.py  chapter_05.py  chapter_06.py  chapter_07.py  chapter_08.py  chapter_09.py  chapter_10.py  chapter_11.py  chapter_12.py  chapter_13.py  chapter_14.py  chapter_15.py  chapter_16.py  chapter_17.py  chapter_18.py  chapter_19.py  chapter_20.py  chapter_21.py  chapter_22.py  chapter_23.py  chapter_24.py  chapter_25.py  chapter_26.py  chapter_27.py  chapter_28.py  chapter_29.py  chapter_30.py  chapter_31.py  chapter_32.py  chapter_33.py  chapter_34.py  chapter_35.py  chapter_36.py  chapter_37.py  foundation_replay.py  part_2_replay.py
policy/: orders_report.rego  orders_report_test.rego
scripts/: chapter_14_isolation.py  render_checkpoint_docs.py  render_miras_journey_video.mjs  run_current_chapter.py  validate_evidence.py
tests/: chapter_late_fixtures.py  test_architecture.py  test_chapter_01.py  test_chapter_02.py  test_chapter_03.py  test_chapter_04.py  test_chapter_05.py  test_chapter_06.py  test_chapter_07.py  test_chapter_08.py  test_chapter_09.py  test_chapter_10.py  test_chapter_11.py  test_chapter_12.py  test_chapter_13.py  test_chapter_14.py  test_chapter_15.py  test_chapter_16.py  test_chapter_17.py  test_chapter_18.py  test_chapter_19.py  test_chapter_20.py  test_chapter_21.py  test_chapter_22.py  test_chapter_23.py  test_chapter_24.py  test_chapter_25.py  test_chapter_26.py  test_chapter_27.py  test_chapter_28.py  test_chapter_29.py  (+11 more)
(+72 files in other folders)
