[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-agentic-ai-companion"
version = "0.1.0"
description = "Executable companion to Engineering Agentic AI"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8"]
live = ["openai>=1.68,<3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
