[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-agentic-ai-companion"
version = "0.1.0"
description = "Executable companion to Engineering Agentic AI"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10,<3"]

[project.optional-dependencies]
test = ["pytest>=8.3,<10"]
live = ["openai>=1.68,<3"]
langgraph = [
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=3.0,<4",
]
integrations = ["httpx>=0.27,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
